--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,129 +1,66 @@
-name: Java CI with Maven
- 
+name: Deploy to ECR
+
 on:
-
+ 
   push:
+    branches: [ main ]
 
-    branches: [ "main" ]
+env:
+  ECR_REPOSITORY: git-repo
+  EKS_CLUSTER_NAME: jitendra-cluster 
+  AWS_REGION: ap-south-1
 
-  pull_request:
-
-    branches: [ "main" ]
- 
 jobs:
-
+  
   build:
- 
+    
+    name: Deployment
     runs-on: ubuntu-latest
- 
+
     steps:
 
-    - uses: actions/checkout@v4
+    - name: Set short git commit SHA
+      id: commit
+      uses: prompt/actions-commit-hash@v2
 
+    - name: Check out code
+      uses: actions/checkout@v2
     - name: Set up JDK 17
-
       uses: actions/setup-java@v4
-
       with:
-
         java-version: '17'
-
         distribution: 'temurin'
-
         cache: maven
-
     - name: Build with Maven
-
       run: mvn -B package --file pom.xml
- 
-    - name: Upload build artifact
-
-      uses: actions/upload-artifact@v4
-
-      with:
-
-        name: war-file
-
-        path: /home/runner/work/eks-gitaction/eks-gitaction/webapp/target/*.war
- 
-    - name: List build directory contents
-
-      run: ls -la /home/runner/work/eks-gitaction/eks-gitaction/webapp/target
- 
-    - name: Download build artifact
-
-      uses: actions/download-artifact@v4
-
-      with:
-
-        name: war-file
-
-        path: ./artifact
- 
-    - name: List build directory contents
-
-      run: ls -la /home/runner/work/eks-gitaction/eks-gitaction/artifact
- 
+    
     - name: Configure AWS credentials
-
       uses: aws-actions/configure-aws-credentials@v1
-
       with:
-
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{env.AWS_REGION}}
 
-        aws-region: ap-south-1
-
-    - name: Log in to Amazon ECR
-
+    - name: Login to Amazon ECR
       id: login-ecr
-
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build Docker image
-
-      run: |
-
-        docker build -t github-repo .
-
-        docker tag github-repo:latest 559050231342.dkr.ecr.ap-south-1.amazonaws.com/github-repo:latest
- 
-    - name: Push Docker image to ECR
-
-      run: |
-
-        docker push 559050231342.dkr.ecr.ap-south-1.amazonaws.com/github-repo:latest
-
-    - name: Set up kubectl
-
-      uses: azure/setup-kubectl@v1
-
-      with:
-
-        version: v1.31.0
-
-    - name: Update kubeconfig
-
-      run: |
-
-        aws eks update-kubeconfig --name my-cluster --region ap-south-1
- 
-    - name: Deploy to EKS
-
+    - name: Build, tag, and push image to Amazon ECR
       env:
-
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-
-        ECR_REPOSITORY: github-repo
-
-        IMAGE_TAG: ${{ github.sha }}
-
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
+        IMAGE_TAG: ${{ steps.commit.outputs.short }}
       run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-        kubectl rollout restart deployment/regapp-deployment 
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
 
-
-
- 
+    - name: Deploy to EKS
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
+        IMAGE_TAG: ${{ steps.commit.outputs.short }}
+      run: |
+    
+        kubectl apply -f regapp-deploy.yml
+        kubectl apply -f regapp-service.yml
