--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,14 @@
-name: Deploy to ECR
-
+name: Java CI with Maven
 on:
- 
   push:
-    branches: [ main ]
-
-env:
-  ECR_REPOSITORY: git-repo
-  EKS_CLUSTER_NAME: jitendra-cluster 
-  AWS_REGION: ap-south-1
-
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 jobs:
-  
   build:
-    
-    name: Deployment
     runs-on: ubuntu-latest
-
     steps:
-
-    - name: Set short git commit SHA
-      id: commit
-      uses: prompt/actions-commit-hash@v2
-
-    - name: Check out code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -33,34 +17,18 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{env.AWS_REGION}}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
-        IMAGE_TAG: ${{ steps.commit.outputs.short }}
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-
-    - name: Update kube config
-      run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
-
-    - name: Deploy to EKS
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
-        IMAGE_TAG: ${{ steps.commit.outputs.short }}
-      run: |
-    
-        kubectl apply -f regapp-deploy.yml
-        kubectl apply -f regapp-service.yml
+        name: war-file
+        path: /home/runner/work/eks-gitaction/eks-gitaction/webapp/target/*.war
+    - name: List build directory contents
+      run: ls -la /home/runner/work/project-maven/project-maven/webapp/target
+    - name: Download build artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: war-file
+        path: ./artifact
+    - name: List build directory contents
+      run: ls -la /home/runner/work/project-maven/project-maven/artifact
+   
