--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,37 @@ jobs:
         path: /home/runner/work/eks-gitaction/eks-gitaction/webapp/target/*.war
     - name: List build directory contents
       run: ls -la /home/runner/work/project-maven/project-maven/webapp/target
-    - name: Download build artifact
-      uses: actions/download-artifact@v4
+
+      # adding aws config...
+      
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        name: war-file
-        path: ./artifact
-    - name: List build directory contents
-      run: ls -la /home/runner/work/project-maven/project-maven/artifact
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-1
+
+      # login ecr
+
+    - name: Log in to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+      # build docker image
+
+    - name: Build Docker image
+      run: |
+        docker build -t image-ecr .
+        docker tag image-ecr:latest 536697268429.dkr.ecr.ap-south-1.amazonaws.com/image-ecr:latest
+
+        #push image to ecr
+
+    - name: Push Docker image to ECR
+      run: |
+        docker push 536697268429.dkr.ecr.ap-south-1.amazonaws.com/image-ecr:latest
+
+
+
+
+
    
